# raytracer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  settings.toml  settings.yaml
.github/: pr-create-merge.yaml
src/: components.rs  main.rs  tests.rs  types.rs  utils.rs
src/components/: camera.rs  ray.rs  sphere.rs  traceable.rs
src/tests/: component_t.rs  traceable_t.rs  vec3_t.rs
src/types/: color.rs  component.rs  dielectric_mat.rs  diffuse_mat.rs  hit_record.rs  material.rs  metal_mat.rs  ray.rs  sphere.rs  traceable.rs  vec3.rs
src/utils/: config.rs  constants.rs  utilities.rs
