[package]
name = "raytracer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8", features=["std", "std_rng"] }
serde = { version="1.0", features=["derive"] }
serde_yaml = "0.9"